[package]
name = "bst"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]

[dev-dependencies]
rand = "0.8"
rayon = "1.5"
criterion = "0.3"

[[bench]]
name = "map_comparison"
harness = false

[[bench]]
name = "set_comparison"
harness = false
